--- a/spring-data-neo4j/src/test/resources/ogm-http.properties
+++ b/spring-data-neo4j/src/test/resources/ogm-http.properties
@@ -10,6 +10,7 @@
 # conditions of the subcomponent's license, as noted in the LICENSE file.
 #
 #
+neo4j.version=3.1
 compiler=org.neo4j.ogm.compiler.MultiStatementCypherCompiler
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
 URI=http://neo4j:password@localhost:7474
