--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-neo4j-parent</artifactId>
-    <version>5.0.0.BUILD-SNAPSHOT</version>
+    <version>5.0.0.DATAGRAPH-965-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Spring Data Neo4j</name>
@@ -26,7 +26,7 @@
     <properties>
         <project.type>multi</project.type>
         <dist.id>spring-data-neo4j</dist.id>
-        <springdata.commons>2.0.0.BUILD-SNAPSHOT</springdata.commons>
+        <springdata.commons>2.0.0.DATACMNS-867-SNAPSHOT</springdata.commons>
         <source.level>1.7</source.level>
         <commonslang.version>2.6</commonslang.version>
         <bundlor.enabled>false</bundlor.enabled>
